--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -7,10 +7,10 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 <!DOCTYPE HTML>
 <html lang="en">
 
-{% set basename = "Nighthawk Coding" %}
-{% set github = "https://github.com/nighthawkcoders" %}
-{% set twitter = "https://twitter.com/NighthawkCoding" %}
-{% set youtube = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
+{% set basename = "Maniac Music by Ava and Alexa" %}
+{% set github = "https://github.com/avac54765/maniacflask" %}
+{% set twitter = "" %}
+{% set youtube = "" %}
 
 <head>
     <!-- Required meta tags -->
